outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval1008993448855368333_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric based on the ratio of incoming and outgoing connections, while also adjusting exploration/exploitation weights non-linearly and penalizing high-degree nodes to balance tour quality and computational efficiency.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric based on the ratio of incoming and outgoing connections, while also adjusting exploration/exploitation weights non-linearly and penalizing high-degree nodes to balance tour quality and computational efficiency.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
